<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Masukkan ke Keranjang"
                    android:textColor="#1DBBD6"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true">

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Sprei"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="Tebal"
                android:textSize="16sp"
                android:textAlignment="gravity" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/standar"
                    android:layout_width="67dp"
                    android:layout_height="75dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/stebal" />

                <TextView
                    android:id="@+id/many_products_tebal"
                    style="bold|underline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="190dp"
                    android:layout_marginTop="50dp"
                    android:textSize="16sp"
                    tools:text="0" />

                <ImageView
                    android:id="@+id/plus_tebal"
                    android:layout_width="26dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/icon_plus" />

                <ImageView
                    android:id="@+id/minus_tebal"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="-90dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/icon_minus" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="10dp"
            android:text="Tipis"
            android:textSize="16sp"
            android:textAlignment="gravity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sar"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/stipis" />

            <ImageView
                android:id="@+id/minus_tipis"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/icon_minus" />

            <TextView
                android:id="@+id/many_products_tipis"
                style="bold|underline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:textSize="16sp"
                tools:text="0" />

            <ImageView
                android:id="@+id/plus_tipis"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/icon_plus" />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:text="Pesan Melalui Whatsapp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>