<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Masukkan ke Keranjang"
                    android:textColor="#1DBBD6"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true">


            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Satuan"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="Baju"
                android:textSize="16sp"
                android:textAlignment="gravity" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/baju"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/baju_chart" />

               <ImageView
                   android:layout_marginTop="50dp"
                   android:id="@+id/minus_baju"
                   android:layout_marginLeft="150dp"
                   android:layout_width="25dp"
                   android:layout_height="25dp"
                   android:src="@drawable/icon_minus"/>

                <TextView
                    android:id="@+id/many_products_baju"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0"
                    android:textSize="16sp"
                    style="bold|underline"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="50dp"/>

                <ImageView
                    android:id="@+id/plus_baju"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/icon_plus"/>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_marginTop="10dp"
                android:text="Celana"
                android:textSize="16sp"
                android:textAlignment="gravity" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/celana"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/celana_chart" />

                <ImageView
                    android:layout_marginTop="50dp"
                    android:id="@+id/minus_celana"
                    android:layout_marginLeft="150dp"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/icon_minus"/>

                <TextView
                    android:id="@+id/many_products_celana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="0"
                    android:textSize="16sp"
                    style="bold|underline"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="50dp"/>

                <ImageView
                    android:id="@+id/plus_celana"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/icon_plus"/>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:text="Pesan Melalui Whatsapp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


